Essai sur menu de navigation - Non valide

--- a/index.html
+++ b/index.html
@@ -52,8 +52,10 @@
           <a href="#">Boisson</a> 
         </div>
       </div>
-      <a class="bouton" href="#">Faire une réservation</a>
+      <div class="conteneur-bouton">
+        <a class="bouton" href="#">Faire une réservation</a>
       <a class="bouton" href="#">Commander en ligne</a>
+      </div>
       <form class="formulaire-navigation">
         <label for="recherche">Trouver un restaurant</label>
         <div>
