--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="fr"> 
   <head>
@@ -8,6 +7,7 @@
     <!-- telechargement des icons-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://cdn.jsdelivr.net/npm/remixicon@3.2.0/fonts/remixicon.css" rel="stylesheet">
+    <!-- feuille de style -->
     <link rel="stylesheet" href="assets/css/main.css">
     <link rel="stylesheet" href="assets/css/typographie.css">
     <link rel="stylesheet" href="assets/css/navigation-principale.css">
@@ -28,56 +28,55 @@
     <title>Vedge : Restaurant Végane</title>
   </head>
   <body>
-    <!-- navigation -->
-    <nav class="navigation-principale">
-      <!-- logo-->
-      <div><img src="assets/img/logo.png" class="logo" alt="Logo Vedge restaurant végane"></div>
-      <div class="menu-deroulant">
-        <a  href="#">Restaurants <i class="ri-arrow-down-s-line"></i></a>
-        <div> 
-          <a href="#">Trois-Rivières</a>
-          <a href="#">Drummondville</a>
-          <a href="#">Val-Jalbert</a>
-          <a href="#">Dix30</a> 
-          <a href="#">Toronto</a> 
-          <a href="#">Berlin</a>
+      <!-- navigation -->
+      <nav class="navigation-principale">
+        <!-- logo-->
+        <div><img src="assets/img/logo.png" class="logo" alt="Logo Vedge restaurant végane"></div>
+        <div class="menu-deroulant">
+          <a  href="#">Restaurants <i class="ri-arrow-down-s-line"></i></a>
+          <div> 
+            <a href="#">Trois-Rivières</a>
+            <a href="#">Drummondville</a>
+            <a href="#">Val-Jalbert</a>
+            <a href="#">Dix30</a> 
+            <a href="#">Toronto</a> 
+            <a href="#">Berlin</a>
+          </div>
         </div>
-      </div>
-      <div class="menu-deroulant">
-        <a  href="#">Menu <i class="ri-arrow-down-s-line"></i></a>
+        <div class="menu-deroulant">
+          <a  href="#">Menu <i class="ri-arrow-down-s-line"></i></a>
+          <div>
+            <a href="#">Brunch</a>
+            <a href="#">Dîner</a>
+            <a href="#">Souper</a>
+            <a href="#">Boisson</a> 
+          </div>
+        </div>
+        <a class="bouton" href="#">Faire une réservation</a>
+        <a class="bouton" href="#">Commander en ligne</a>
+        <form class="formulaire-navigation">
+          <label for="recherche">Trouver un restaurant</label>
+          <div>
+            <input id="recherche" type="text" placeholder="Entrez votre code postal">
+            <button type="submit" aria-label="button"><i class="fa fa-search"></i></button>
+          </div>
+        </form>
+      </nav>
+      <!-- section : HEADER -->
+      <header class="entete-vedette grande-image">
+        <img src="assets/img/repas-vegane-restaurant-vedge.jpg" alt="Repas végane">
         <div>
-          <a href="#">Brunch</a>
-          <a href="#">Dîner</a>
-          <a href="#">Souper</a>
-          <a href="#">Boisson</a> 
-        </div>
-      </div>
-      <a class="bouton" href="#">Faire une réservation</a>
-      <a class="bouton" href="#">Commander en ligne</a>
-      <form class="formulaire-navigation">
-        <label for="recherche">Trouver un restaurant</label>
-        <div>
-          <input id="recherche" type="text" placeholder="Entrez votre code postal">
-          <button type="submit" aria-label="button"><i class="fa fa-search"></i></button>
-        </div>
-      </form>
-    </nav>
-    <!-- section : HEADER -->
-    <header class="entete-vedette grande-image">
-              <img src="assets/img/repas-vegane-restaurant-vedge.jpg" alt="Repas végane">
-              <div>
-                  <div> 
-                      <h1>Vedge</h1>
-                      <h2>restaurant végane</h2>
-                  </div>
-                  
-                  <div>
-                      <h3>Botanique et décadente</h3>
-                      <p>Savourez les meilleurs plats dans le respect de la nature</p>
-                  </div>           
-                  <a href="#">Découvrez notre menu</a>
-              </div>       
-  </header>
+            <div> 
+              <h1>Vedge</h1>
+              <h2>restaurant végane</h2>
+            </div> 
+            <div>
+              <h3>Botanique et décadente</h3>
+              <p>Savourez les meilleurs plats dans le respect de la nature</p>
+            </div>           
+            <a href="#">Découvrez notre menu</a>
+        </div>       
+    </header>
     <!-- section :(monajout) categorie de menu -->
     <section>
       <header>
@@ -118,26 +117,26 @@
           <h3>Deux mimosas pour 15$ pendant toute l'heure du brunch</h3>
           <a href="#">Voir nos promotions</a>
       </div>    
-  </section>
+    </section>
 
-  <!-- section : À propos ================================================================-->
+    <!-- section : À propos ================================================================-->
 
-  <section>
-    <header>
-      <h2>Notre philosophie</h2>
-    </header>
-    <div class="texte-image">
-        <div>   
+    <section>
+      <header>
+        <h2>Notre philosophie</h2>
+      </header>
+      <div class="texte-image">
+          <div>   
             <h3>Cuisine artisanale</h3>
             <p>Nous connaissons chaque ingrédient qui entre dans la composition de nos recettes. Nous créons la plupart de nos recettes à partir de rien - rien que des ingrédients naturels, frais et savoureux. Voilà qui fait la vraie beauté de notre cuisine!</p>
             <div>
               <a href="#">En savoir plus</a> 
             </div>
-        </div>
-        <img src="assets/img/legume-locaux.jpg" alt="Légume frais">
-    </div>
-</section>
-    <!-- section : Restaurant vedette ================================================================-->
+          </div>
+          <img src="assets/img/legume-locaux.jpg" alt="Légume frais">
+      </div>
+    </section>
+      <!-- section : Restaurant vedette ================================================================-->
     <section>
       <header>
         <h2>Restaurants en vedette</h2>
@@ -182,7 +181,9 @@
           </article>
         </div>
         <aside class="aside">
-          <h2>Trouvez un restaurant "Vedge" près de chez vous</h2>
+          <header>
+            <h2>Trouvez un restaurant "Vedge" près de chez vous</h2>
+          </header>
           <form>
             <label for="mapRecherche">Entrez votre ville ou votre code postal</label>
             <input id="mapRecherche" type="search" placeholder="Entrez votre ville ou votre code postal">
@@ -191,7 +192,7 @@
         </aside>
       </div>
     </section>
-    <!-- section : initation franchise ==============================================-->
+      <!-- section : initation franchise ==============================================-->
     <section class="contenu-sur-image grande-image">
       <img src="assets/img/menu-vegane-restaurant-vedge.jpg" alt="Repas végane">
       <div>
@@ -199,8 +200,8 @@
           <h3>Laissez-nous vous convaincre de développer votre propre franchise "Vedge"</h3>
           <a href="#">Contactez-nous</a>
       </div>
-  </section>
-    <!-- FOOTER ========================================================================-->
+    </section>
+      <!-- FOOTER ========================================================================-->
     <footer class="pied-de-site">
       <div class="conteneur-pied-de-site">
         <div>
