--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       <header class="entete-vedette grande-image">
         <img src="assets/img/repas-vegane-restaurant-vedge.jpg" alt="Repas végane">
         <div>
-            <div> 
+            <div>      
               <h1>Vedge</h1>
               <h2>restaurant végane</h2>
             </div> 
@@ -127,44 +127,44 @@
       </header>
       <div class="grille">
           <div class="grille-multiple">
-          <article class="carte">
-            <a href="#">
-              <h3>Trois-Rivières</h3>
-              <img src="assets/img/restaurant-vedge-trois-rivieres.jpg" alt="Restaurant de Trois-Rivières">
-            </a>
-          </article>
-          <article class="carte">
-            <a href="#">
-              <h3>Drummonville</h3>
-              <img src="assets/img/restaurant-vedge-drummondville.jpg" alt="Restaurant de Drummondville">
-            </a>
-          </article>
-          <article class="carte">
-            <a href="#">
-              <h3>Val-Jalbert</h3>
-              <img src="assets/img/restaurant-vedge-val-jalbert.jpg" alt="Restaurant de Val-Jalbert">
-            </a>
-          </article>
-          <article class="carte">
-            <a href="#">
-              <h3>Dix30</h3>
-              <img src="assets/img/restaurant-vedge-dix-30.jpg" alt="Restaurant du quartier Dix30">
-            </a>
-          </article>
-          <article class="carte">
-            <a href="#">
-              <h3>Toronto</h3>
-              <img src="assets/img/restaurant-vedge-toronto.jpg" alt="Restaurant de Toronto">
-            </a>
-          </article>
-          <article class="carte">
-            <a href="#">
-              <h3>Berlin</h3>
-              <img src="assets/img/restaurant-vedge-berlin.jpg" alt="Restaurant de Berlin">
-            </a>
-          </article>
-        </div>
-        <aside class="aside">
+            <article class="carte">
+              <a href="#">
+                <h3>Trois-Rivières</h3>
+                <img src="assets/img/restaurant-vedge-trois-rivieres.jpg" alt="Restaurant de Trois-Rivières">
+              </a>
+            </article>
+            <article class="carte">
+              <a href="#">
+                <h3>Drummonville</h3>
+                <img src="assets/img/restaurant-vedge-drummondville.jpg" alt="Restaurant de Drummondville">
+              </a>
+            </article>
+            <article class="carte">
+              <a href="#">
+                <h3>Val-Jalbert</h3>
+                <img src="assets/img/restaurant-vedge-val-jalbert.jpg" alt="Restaurant de Val-Jalbert">
+              </a>
+            </article>
+            <article class="carte">
+              <a href="#">
+                <h3>Dix30</h3>
+                <img src="assets/img/restaurant-vedge-dix-30.jpg" alt="Restaurant du quartier Dix30">
+              </a>
+            </article>
+            <article class="carte">
+              <a href="#">
+                <h3>Toronto</h3>
+                <img src="assets/img/restaurant-vedge-toronto.jpg" alt="Restaurant de Toronto">
+              </a>
+            </article>
+            <article class="carte">
+              <a href="#">
+                <h3>Berlin</h3>
+                <img src="assets/img/restaurant-vedge-berlin.jpg" alt="Restaurant de Berlin">
+              </a>
+            </article>
+          </div>
+          <aside>
           <header>
             <h2>Trouvez un restaurant "Vedge" près de chez vous</h2>
           </header>
